# mailat

./: .env.example  .env.production.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
apps/api/: .dockerignore  Dockerfile  go.mod  go.sum
apps/api/cmd/server/: main.go
apps/api/internal/config/: config.go
apps/api/internal/controller/: auth.go  automation.go  inbox.go  (+20 more)
apps/web/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/docker/: nginx.conf
dkim/: mailat.co.public.txt
docker/caddy/: Caddyfile
docker/stalwart/: config.toml
prisma/: schema.prisma
prisma/migrations/20260125_add_aws_provisioning/: migration.sql
prisma/migrations/20260125_add_ses_fields/: migration.sql
prisma/migrations/20260126_add_email_receiving/: migration.sql
prisma/migrations/20260127_add_encrypted_password/: migration.sql
prisma/migrations/20260128_add_identity_color/: migration.sql
prisma/seeds/: index.ts
scripts/: test-connections.ts
sdks/javascript/: package.json  tsconfig.json
sdks/javascript/src/: client.ts  index.ts  types.ts
sdks/python/: pyproject.toml
sdks/python/mailat/: __init__.py  client.py  exceptions.py  types.py
sdks/python/mailat/resources/: __init__.py  campaigns.py  contacts.py  domains.py  emails.py  templates.py  webhooks.py
(+106 files in other folders)
