[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailat"
version = "1.0.0"
description = "Official Python SDK for mailat.co API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "mailat.co", email = "support@mailat.co" }
]
keywords = ["email", "api", "sdk", "transactional", "marketing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://mailat.co"
Documentation = "https://docs.mailat.co/sdks/python"
Repository = "https://github.com/dublyo/mailat"

[tool.hatch.build.targets.wheel]
packages = ["mailat"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
